Better handling of quotation marks when editing tags inside a script area.

BUG: 118693